--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 <!-- End Portfolio -->
 <!-- Contact -->
 <section class="image-bg-fluid-height" id="contact">
-  <form action = "mailto:cheri.hammick@gmail.com" method = "post" enctype = "text/plain">
+  <form action = "mailto:taghzout.daoud@gmail.com" method = "post" enctype = "text/plain">
     <div class = "row">
-      <h1> CONTACT ME: </h1>
+      <h1> Contacter moi </h1>
       <br></br>
       <div class = "form-group">
         <label for = "name">NAME: </label>
