--- a/index.html
+++ b/index.html
@@ -59,22 +59,22 @@
 <section class="image-bg-fluid-height" id="contact">
   <form action = "mailto:taghzout.daoud@gmail.com" method = "post" enctype = "text/plain">
     <div class = "row">
-      <h1> Contacter moi </h1>
+      <h1> Contactez moi </h1>
       <br></br>
       <div class = "form-group">
-        <label for = "name">NAME: </label>
-        <input type = "name" id = "name" class="form-control" placeholder = "Enter Name" size = "50">
+        <label for = "name">Nom: </label>
+        <input type = "name" id = "name" class="form-control" placeholder = "Taper Nom" size = "50">
     </div>
     <div class = "form-group">
                <label for = "email">EMAIL: </label>
-        <input type = "email" id = "email" class = "form-control" placeholder = "Enter Email Address" size = "50">
+        <input type = "email" id = "email" class = "form-control" placeholder = "Taper addresse email" size = "50">
     </div>
       <br></br>
   <div class = "form-group">
-      <label class = "control-label" for = "comment">COMMENT: </label>
+      <label class = "control-label" for = "comment">Commmentaires: </label>
         <input type = "comment" id = "comment" class = "form-control" size = "250">
     <br></br>
-  <button type = "submit" class = "btn btn-default">Submit</button>
+  <button type = "submit" class = "btn btn-default">Envoyer</button>
       </div>
     </div>
       </div>
