--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
         <input type = "name" id = "name" class="form-control" placeholder = "Taper Nom" size = "50">
     </div>
     <div class = "form-group">
-               <label for = "email">EMAIL: </label>
+               <label for = "email">Email: </label>
         <input type = "email" id = "email" class = "form-control" placeholder = "Taper addresse email" size = "50">
     </div>
       <br></br>
   <div class = "form-group">
-      <label class = "control-label" for = "comment">Commmentaires: </label>
+      <label class = "control-label" for = "comment">Commentaires: </label>
         <input type = "comment" id = "comment" class = "form-control" size = "250">
     <br></br>
   <button type = "submit" class = "btn btn-default">Envoyer</button>
