--- a/index.html
+++ b/index.html
@@ -13,6 +13,23 @@
 
 <header>
 
+  <div class="myNavbar">
+    <div class="container-fluid ">
+		<div class="navbar-header">
+			<a href="#">Dmasko</a>
+		</div>
+		<div>
+			<ul class="nav navbar-nav" id = "navStuff">
+				<li><a href="#about" ><span class="about"></span> About</a></li>
+				<li><a href="#portfolio"><span class="portfolio"></span> Portfolio</a></li>
+				<li><a href="#contact"><span class="contact"></span> Contact</a></li>
+			</ul>
+		</div>
+	</div>
+</div>  
+
+  
+
 <h1>Attention site en travaux ! <i class="em em-construction  " aria-role="presentation" aria-label="BIRD"></i>
 </h1>
     
