--- a/index.html
+++ b/index.html
@@ -8,41 +8,25 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 
 	<link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
-	<meta name="author" content="Hassan Ali">
+	<meta name="author" content="Taghzout Daoud">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 	<body>
 		<!-- Navbar -->
 		<nav class="nav container void-background">
-			<!-- This "nav-menu" is hidden on mobile -->
-			<!-- Add the modifier "is-active" to display it on mobile -->
+
 			<div class="nav-left">
-				<!--<a href="http://medium.com/@hassanhelfi/" class="nav-item">
-					<span class="icon">
-						<i class="fa fa-medium"></i>
-					</span>-->
+
 				</a>
 				<a href="http://github.com/dmasko" class="nav-item">
 					<span class="icon">
 						<i class="fa fa-github"></i>
 					</span>
 				</a>
-				<!--
-				<a href="https://twitter.com/hassanhelfi" class="nav-item">
-					<span class="icon">
-						<i class="fa fa-twitter"></i>
-					</span>
-				</a>	-->			
+		
 			</div>
 
-			<!--<div class="nav-right nav-menu">
-				<a class="nav-item" href="#about">A propos</a>
-				<a class="nav-item" href="#projects">Projets</a>
-				<a class="nav-item" href="#social">Social</a>
-			</div> -->
 
-			<!-- This "nav-toggle" hamburger menu is only visible on mobile -->
-			<!-- You need JavaScript to toggle the "is-active" class on "nav-menu" -->
 			<span class="nav-toggle">
 				<span></span>
 				<span></span>
@@ -99,6 +83,22 @@
 								<div>			
 									<p>
 										Site Html Css Agence web fictive, contenant un site fitness, de restauration et de coiffure <a href="https://agencekouda.github.io/" target="_blank">Lien</a>
+									</p>
+								</div>
+							</article>
+						</div>
+					</div>
+					<div class="column">
+						<div class="box project-text">
+							<article>
+								<div>
+									<figure class="image project-figure">
+										<img src="assets/img/block.png" alt="Image">
+									</figure>
+								</div>
+								<div>			
+									<p>
+									<a href="Snake/snake.html" target="_blank">Snake</a>
 									</p>
 								</div>
 							</article>
