--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
   </style>
 </head>
 <body>
+  
   <canvas id="oldSkool"></canvas>
   <button id="backButton">Retour à la page d'accueil</button>
 
@@ -54,7 +55,7 @@
         "$ \"Français\",\"Anglais\",\"Arabe\"",
         "",
         "> Daoud.interets",
-        "$ [\"Code\", \"Design\", \"Sports\", \"Musique\", \"Café\"]",
+        "$ [\"Code\", \"Design\", \"Sports\", \"Musique\", \"Anime\"]",
         "",
         "> Daoud.Experience",
         "$ \"Developpeur Wordpress\"",
