--- a/index.html
+++ b/index.html
@@ -23,15 +23,21 @@
 						<i class="fa fa-github"></i>
 					</span>
 				</a>
-		
+			</div>
+			<div class="nav-item">	
+				<a href="contact.html" class="nav-item">
+					<span class="icon">
+						<i class="fa fa-at"></i>
+					</span>
+				</a>
 			</div>
 
 
-			<span class="nav-toggle">
+			<!-- <span class="nav-toggle">
+				<span>ll</span>
 				<span></span>
 				<span></span>
-				<span></span>
-			</span>
+			</span> -->
 		</nav>
 				
 		<!-- About Me -->
