TODO or NOT TODO

--- a/Snake/snake.html
+++ b/Snake/snake.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Snake Game</title>
-    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="stylesheet" type="text/css" href="snake.css"/>
 
     <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
     
@@ -13,8 +13,20 @@
       - pywebcanvas
     </py-env>
   </head>
+  <header>
+    <nav>
+      <ul>
+      <li><h1><a href="../index.html">🏠</a></h1></li>
+      </ul>
+    </nav>
+  </header>
+  
+  
   <body>
-        <py-script src="./snake.py"><py-script>
+    <div class="snake">
+
+      <py-script src="./snake.py"><py-script> 
+      </div>
 
   </body>
 </html>
