--- a/about.html
+++ b/about.html
@@ -13,15 +13,17 @@
     }
     #backButton {
       position: absolute;
-      top: 10px;
-      left: 10px;
+      top: 0;
+      left: 50%;
+      transform: translateX(-50%);
     }
   </style>
 </head>
+
 <body>
   
   <canvas id="oldSkool"></canvas>
-  <button id="backButton">Retour à la page d'accueil</button>
+  <button id="backButton">🏠</button>
 
   <script>
     var db = document.body;
