--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 							</article>
 						</div>
 					</div>
+					<!-- Project 3-->
 					<div class="column">
 						<div class="box project-text">
 							<article>
@@ -105,6 +106,23 @@
 								<div>			
 									<p>
 									<a href="Snake/snake.html" target="_blank">Snake</a>
+									</p>
+								</div>
+							</article>
+						</div>
+					</div>
+					<!-- Project 4-->
+					<div class="column">
+						<div class="box project-text">
+							<article>
+								<div>
+									<figure class="image project-figure">
+										<img src="assets/img/Todo.png" alt="Image">
+									</figure>
+								</div>
+								<div>			
+									<p>
+									<a href="Todo/todo.html" target="_blank">Todo list</a>
 									</p>
 								</div>
 							</article>
