--- a/Todo/todo.html
+++ b/Todo/todo.html
@@ -45,7 +45,7 @@
   </section>
   <header>
     
-    <input id="new-todo" type="text" placeholder="Nouvelle tâche + 'Entrer'...">
+    <input id="new-todo" type="text" placeholder="Nouvelle tâche + 'Entrée'...">
     
   </header>
 
