--- a/Todo/todo.html
+++ b/Todo/todo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Todo</title>
     <link href="index.css" rel="stylesheet"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/json2/20150503/json2.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.js"></script>
