--- a/about.html
+++ b/about.html
@@ -47,31 +47,31 @@
   <script>
     //BEGIN SCRIPT RELAY TO CODEPEN.IO...
     _s = [
-        "> Daoud.ville",
+        "> Daoud.Ville",
         "$ \"France, Viry-Chatillon\"",
         "",
-        "> Daoud.education",
+        "> Daoud.Cursus",
         "$ \"Baccalaureat Scientifique\"",
         "",
-        "> Daoud.langue",
+        "> Daoud.Langues",
         "$ \"Français\",\"Anglais\",\"Arabe\"",
         "",
-        "> Daoud.interets",
+        "> Daoud.Interets",
         "$ [\"Code\", \"Design\", \"Sports\", \"Musique\", \"Anime\"]",
         "",
         "> Daoud.Experience",
         "$ \"Developpeur Wordpress\"",
         "",
-        "> Daoud.email",
+        "> Daoud.Email",
         "$ \"taghzout.daoud@gmail.com\"",
         "",
-        "> Daoud.github",
+        "> Daoud.Github",
         "$ \"github.com/dmasko\"",
         "",
-        "> Daoud.portfolio",
+        "> Daoud.Portfolio",
         "$ \"https://dmasko.github.io/\"",
         "",
-        "> Daoud.linkedin",
+        "> Daoud.Linkedin",
         "$ \"https://www.linkedin.com/in/daoud-taghzout-665b36203/\"",
     ];
     x = 0;
